--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "devDependencies": {
     "eslint": "^7.15.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6"
   },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --verbose"
   }
 }
